--- a/file.html
+++ b/file.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
  
-<title>META TITLE HEre></title>
+<title> HEre></title>
 <link rel="canonical" href="<?php echo $pagename ?>" />
 <link rel="shortcut icon" href="img/" alt="<?php echo @$row['alt_text_logo'] ?>" />
 <meta charset="UTF-8">
