--- a/huzmark_tech/about-us.html
+++ b/huzmark_tech/about-us.html
@@ -113,7 +113,7 @@ waga, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #080808;
+        background: #0e0e0e;
     color: #ffffff;
     }
     footer a{
