--- a/huzmark_tech/sitemap.html
+++ b/huzmark_tech/sitemap.html
@@ -109,7 +109,7 @@ waga, , , , , , ">
         border: none!important;
     }
        footer{
-        background: #060606;
+        background: #0d0d0d;
     color: #ffffff;
     }
     footer a{
