--- a/about-us.html
+++ b/about-us.html
@@ -113,7 +113,7 @@ te23, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #0e0e0e;
+        background: #0f0f0f;
     color: #ffffff;
     }
     footer a{
