--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
          color: #606060;
     }
     .bg-brown{
-        background: #f6f4f0;
+        background: #f3f1ed;
     }
 
       .bg-primary-new{
@@ -65,7 +65,7 @@
     
     }
           .bg-primary-new *{
-                color:#040404!important ;
+                color:#050505!important ;
           }
     .display-4{
         font-size:45px!important;
@@ -127,11 +127,11 @@
         text-decoration: none!important;
     }
     .bg-brown *{
-        color:#0d0d0d;
+        color:#070707;
   
     }
       .bg-brown a,.bg-primary-new a{
-  color:#0d0d0d!important;     
+  color:#070707!important;     
         text-decoration: underline!important;
     }
     footer *{
@@ -168,7 +168,7 @@
         border: none!important;
     }
     footer{
-        background: #050505;
+        background: #070707;
     color: #ffffff;
     }
     footer a{
@@ -479,38 +479,38 @@ background: white;
   "teaches": ["","","","","","",""],
   "offers": [{
     "sku": "",
-    "availabilityStarts": "2023-06-07 20:39:15",
+    "availabilityStarts": "2023-06-07 20:40:58",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:39:15",
+    "availabilityStarts":"2023-06-07 20:40:58",
     "priceCurrency": "USD"
   }
  ,
  {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:39:15",
+    "availabilityStarts":"2023-06-07 20:40:58",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:39:15",
+    "availabilityStarts":"2023-06-07 20:40:58",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:39:15",
+    "availabilityStarts":"2023-06-07 20:40:58",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts": "2023-06-07 20:39:15",
+    "availabilityStarts": "2023-06-07 20:40:58",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:39:15",
+    "availabilityStarts":"2023-06-07 20:40:58",
     "priceCurrency": "USD"
   }  
   ],
@@ -555,8 +555,8 @@ background: white;
 "name": "test",
 "aggregateRating": {
 "@type": "AggregateRating",
-    "ratingValue" : "3" ,
-    "ratingCount": "5",
+    "ratingValue" : "5" ,
+    "ratingCount": "3",
     "reviewCount": "4"
         }
 }
@@ -775,8 +775,7 @@ width="100%" class=" banner-img  3" alt="test" title="test ">
             <div class="col-lg-12 pt-5 ">
                  <h3 class="display-4 mt-2 font-weight-400" id="">                </h3>
                 <div class="content3">  
-                                                           <p><a href="te23.html">te23</a></p>
-                         </div>
+                                                      </div>
             </div>
                    </div>
     </div>
@@ -846,7 +845,8 @@ width="100%" class=" banner-img  3" alt="test" title="test ">
                  <h6 class="display-4 mt-2 font-weight-400">  
                 </h6>
                 <div class="content3">  </div>
-                                                            </div>
+                                                                 <p><a href="te23.html">te23</a></p>
+                         </div>
                       </div>
     </div>
 </div>
