--- a/te23.html
+++ b/te23.html
@@ -57,7 +57,7 @@
          color: #606060;
     }
     .bg-brown{
-        background: #f3f1ed;
+        background: #eeece8;
     }
 
       .bg-primary-new{
@@ -65,7 +65,7 @@
     
     }
           .bg-primary-new *{
-                color:#0b0b0b!important ;
+                color:#010101!important ;
           }
     .display-4{
         font-size:45px!important;
@@ -127,11 +127,11 @@
         text-decoration: none!important;
     }
     .bg-brown *{
-        color:#050505;
+        color:#0a0a0a;
   
     }
       .bg-brown a,.bg-primary-new a{
-  color:#050505!important;     
+  color:#0a0a0a!important;     
         text-decoration: underline!important;
     }
     footer *{
@@ -168,7 +168,7 @@
         border: none!important;
     }
     footer{
-        background: #030303;
+        background: #000000;
     color: #ffffff;
     }
     footer a{
@@ -479,38 +479,38 @@ background: white;
   "teaches": ["","","","","","",""],
   "offers": [{
     "sku": "",
-    "availabilityStarts": "2023-06-07 20:42:17",
+    "availabilityStarts": "2023-06-07 20:50:54",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:42:17",
+    "availabilityStarts":"2023-06-07 20:50:54",
     "priceCurrency": "USD"
   }
  ,
  {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:42:17",
+    "availabilityStarts":"2023-06-07 20:50:54",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:42:17",
+    "availabilityStarts":"2023-06-07 20:50:54",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:42:17",
+    "availabilityStarts":"2023-06-07 20:50:54",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts": "2023-06-07 20:42:17",
+    "availabilityStarts": "2023-06-07 20:50:54",
     "priceCurrency": "USD"
   },
   {
     "sku": "",
-    "availabilityStarts":"2023-06-07 20:42:17",
+    "availabilityStarts":"2023-06-07 20:50:54",
     "priceCurrency": "USD"
   }  
   ],
@@ -555,9 +555,9 @@ background: white;
 "name": "te23",
 "aggregateRating": {
 "@type": "AggregateRating",
-    "ratingValue" : "3" ,
+    "ratingValue" : "4" ,
     "ratingCount": "5",
-    "reviewCount": "3"
+    "reviewCount": "5"
         }
 }
 </script>
@@ -775,7 +775,11 @@ width="100%" class=" banner-img  3" alt="te23" title="te23 ">
             <div class="col-lg-12 pt-5 ">
                  <h3 class="display-4 mt-2 font-weight-400" id="">                </h3>
                 <div class="content3">  
-                                                      </div>
+                                                                    <a class="allShow   " href="test.html">
+
+
+                        test            </a>
+                                                                  </div>
             </div>
                    </div>
     </div>
@@ -791,7 +795,8 @@ width="100%" class=" banner-img  3" alt="te23" title="te23 ">
             <div class="col-lg-12 pt-5 ">
                  <h3 class="display-4 mt-2 font-weight-400" id="">                </h3>
                 <div class="content4">  </div>
-                                                            </div>
+                                                                 <p><a href="test.html">test</a></p>
+                         </div>
                    </div>
     </div>
 </div>
@@ -828,12 +833,7 @@ width="100%" class=" banner-img  3" alt="te23" title="te23 ">
             <div class="col-lg-12 pt-5 ">
                  <h5 class="display-4 mt-2 font-weight-400" id="">                </h5>
                 <div class="content6">  </div>
-                                                                    <a class="allShow  ILinks" href="test.html">
-
-
-                      test            </a>
-                                                                             <p><a href="test.html">test</a></p>
-                         </div>
+                                                            </div>
                    </div>
     </div>
 </div>
