--- a/about-us.html
+++ b/about-us.html
@@ -113,7 +113,7 @@ te23, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #010101;
+        background: #0a0a0a;
     color: #ffffff;
     }
     footer a{
