--- a/waga.html
+++ b/waga.html
@@ -57,7 +57,7 @@
          color: #606060;
     }
     .bg-brown{
-        background: #f3f1ed;
+        background: #edebe7;
     }
 
       .bg-primary-new{
@@ -65,7 +65,7 @@
     
     }
           .bg-primary-new *{
-                color:#040404!important ;
+                color:#070707!important ;
           }
     .display-4{
         font-size:45px!important;
@@ -127,11 +127,11 @@
         text-decoration: none!important;
     }
     .bg-brown *{
-        color:#0b0b0b;
+        color:#050505;
   
     }
       .bg-brown a,.bg-primary-new a{
-  color:#0b0b0b!important;     
+  color:#050505!important;     
         text-decoration: underline!important;
     }
     footer *{
@@ -168,7 +168,7 @@
         border: none!important;
     }
     footer{
-        background: #0e0e0e;
+        background: #080808;
     color: #ffffff;
     }
     footer a{
@@ -463,38 +463,38 @@ background: white;
   "teaches": ["Introduction","Benefits of Testing","Types of Tests Available","Steps for Creating a Test","Best Practices for Designing a Test","Tips for Administering a Test","Analyzing the Results of the Test"],
   "offers": [{
     "sku": "Introduction",
-    "availabilityStarts": "2023-06-07 21:33:56",
+    "availabilityStarts": "2023-06-07 21:34:31",
     "priceCurrency": "USD"
   },
   {
     "sku": "Benefits of Testing",
-    "availabilityStarts":"2023-06-07 21:33:56",
+    "availabilityStarts":"2023-06-07 21:34:31",
     "priceCurrency": "USD"
   }
  ,
  {
     "sku": "Types of Tests Available",
-    "availabilityStarts":"2023-06-07 21:33:56",
+    "availabilityStarts":"2023-06-07 21:34:31",
     "priceCurrency": "USD"
   },
   {
     "sku": "Steps for Creating a Test",
-    "availabilityStarts":"2023-06-07 21:33:56",
+    "availabilityStarts":"2023-06-07 21:34:31",
     "priceCurrency": "USD"
   },
   {
     "sku": "Best Practices for Designing a Test",
-    "availabilityStarts":"2023-06-07 21:33:56",
+    "availabilityStarts":"2023-06-07 21:34:31",
     "priceCurrency": "USD"
   },
   {
     "sku": "Tips for Administering a Test",
-    "availabilityStarts": "2023-06-07 21:33:56",
+    "availabilityStarts": "2023-06-07 21:34:31",
     "priceCurrency": "USD"
   },
   {
     "sku": "Analyzing the Results of the Test",
-    "availabilityStarts":"2023-06-07 21:33:56",
+    "availabilityStarts":"2023-06-07 21:34:31",
     "priceCurrency": "USD"
   }  
   ],
@@ -539,9 +539,9 @@ background: white;
 "name": "waga",
 "aggregateRating": {
 "@type": "AggregateRating",
-    "ratingValue" : "3" ,
-    "ratingCount": "3",
-    "reviewCount": "3"
+    "ratingValue" : "4" ,
+    "ratingCount": "4",
+    "reviewCount": "5"
         }
 }
 </script>
@@ -775,7 +775,12 @@ Moreover, being kind has been shown to reduce stress levels. By engaging in acts
 Additionally, studies have shown that performing random acts of kindness makes us healthier by boosting our immune systems. It also helps us foster positive relationships with family members and friends by reinforcing bonds between us all. Furthermore, it encourages us to become more involved in our communities since our actions will be seen as an example for others to follow. <br />
 <br />
 In conclusion, WAGA provides numerous benefits which should not be overlooked! The simple act of doing something nice for another person can help bring a sense of fulfillment and joy into our lives while also improving the lives of those around us. So let's all take the time to show kindness and reap the rewards that come along with it!</p> 
-                                                      </div>
+                                                                    <a class="allShow   " href="index.html">
+
+
+                        test            </a>
+                                                                       <p><a href="index.html">test</a></p>
+                         </div>
             </div>
                    </div>
     </div>
@@ -797,12 +802,7 @@ Firstly, there is 'legal' WAGA, which works towards changing laws and policies t
 Furthermore, 'cultural' WAGA focuses on increasing awareness around issues facing different genders through art, media or literature. The aim here is not only to spread information but also to combat negative stereotypes about certain genders while celebrating diversity! Finally there's 'educational' WAGA which looks at how education systems can become more inclusive for all genders by introducing new curricula or reforming existing ones (e.g., including LGBTIQ+ history). <br />
 <br />
 In conclusion, these types of WAGAs are essential for creating an equitable society where everyone can thrive without fear of judgement or prejudice! Through their efforts we can move towards a brighter future where everyone's voices are heard loud & clear!</p> </div>
-                                                                    <a class="allShow  ILinks" href="index.html">
-
-
-                       test            </a>
-                                                                             <p><a href="index.html">test</a></p>
-                         </div>
+                                                            </div>
                    </div>
     </div>
 </div>
