--- a/sitemap.html
+++ b/sitemap.html
@@ -109,7 +109,7 @@ waga, , , , , , ">
         border: none!important;
     }
        footer{
-        background: #121212;
+        background: #0a0a0a;
     color: #ffffff;
     }
     footer a{
