--- a/news.html
+++ b/news.html
@@ -126,7 +126,7 @@ waga, , , , , , , ">
         border: none!important;
     }
    footer{
-        background: #080808;
+        background: #0c0c0c;
     color: #ffffff;
     }
     footer a{
