--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -115,7 +115,7 @@ waga, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #0e0e0e;
+        background: #010101;
     color: #ffffff;
     }
     footer a{
