--- a/about-us.html
+++ b/about-us.html
@@ -113,7 +113,7 @@ waga, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #000000;
+        background: #060606;
     color: #ffffff;
     }
     footer a{
@@ -192,7 +192,7 @@ waga, , , , , , ">
 
 
              
-          <li class="mt-2   nav-item pr-md-4"><a  class="nav-link allShow   " href="index.html"  >test</a></li>
+          <li class="mt-2   nav-item pr-md-4"><a  class="nav-link allShow   " href="index.html"  >test2</a></li>
        
   
           <li class="mt-2   nav-item pr-md-4"><a  class="nav-link allShow   " href="waga.html"  >waga</a></li>
