--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -115,7 +115,7 @@ waga, , , , , , ">
         border: none!important;
     }
      footer{
-        background: #070707;
+        background: #0f0f0f;
     color: #ffffff;
     }
     footer a{
