--- a/sitemap.html
+++ b/sitemap.html
@@ -109,7 +109,7 @@ waga, , , , , , ">
         border: none!important;
     }
        footer{
-        background: #030303;
+        background: #0b0b0b;
     color: #ffffff;
     }
     footer a{
