--- a/huzaifa/technical-seo-2.html
+++ b/huzaifa/technical-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Technical SEO">
 <meta name="dc.title" content="Technical SEO">
-<meta name="description" content="Technical SEO is a challenging yet (exciting!), process to help websites achieve higher rankings in search engine results pages. It involves optimizing content and website structure, as well as monitoring its performance. Without proper technical SEO, sites can struggle to rank in the SERPs, resulting in decreased traffic and potential losses of revenue!">
+<meta name="description" content="Technical SEO is a vital part of any online business. It's the process of optimizing your website for search engine results (SEO) to boost visibility and rankings in organic search results. Without it, you're unlikely to get any traffic or exposure! In simple terms, technical SEO involves improving the technical elements on your website that can help it perform better in organic search engine rankings. These include things like page speed, internal linking structures, canonicalization, mobile optimization and structured data. ">
 <meta name="keywords" content="Technical SEO,Technical SEO">
 <meta name="author" content="Technical SEO">
 <link rel="canonical" href="technical-seo-2.html">
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #090909 !important;
+ color: #0f0f0f !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #111111;
+ color: #000000;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #111111 !important;
+ color: #000000 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #111111;
+ background: #141414;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Technical SEO"],
 "offers": [{
 "sku": "Technical SEO",
-"availabilityStarts": "2023-06-19 10:50:22",
+"availabilityStarts": "2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:22",
+"availabilityStarts":"2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:22",
+"availabilityStarts":"2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:22",
+"availabilityStarts":"2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:22",
+"availabilityStarts":"2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:22",
+"availabilityStarts": "2023-06-19 10:50:24",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:22",
+"availabilityStarts":"2023-06-19 10:50:24",
 "priceCurrency": "USD"
 } 
 ],
@@ -1661,7 +1661,7 @@ Q2. Why is link building important for SEO?",
 "aggregateRating": {
 "@type": "AggregateRating",
 "ratingValue": "3","ratingCount": "3",
-"reviewCount": "5"
+"reviewCount": "4"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Technical SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Technical SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Technical SEO is a challenging yet (exciting!), process to help websites achieve higher rankings in search engine results pages. It involves optimizing content and website structure, as well as monitoring its performance. Without proper technical SEO, sites can struggle to rank in the SERPs, resulting in decreased traffic and potential losses of revenue!<br /> <br /> Firstly, it's important to identify any errors or issues that are preventing optimal performance. This includes things like broken links, slow loading times and duplicate content. If these problems aren't sorted out quickly, they could have a severe impact on the site’s ability to generate organic traffic. Furthermore, implementing redirects for any removed or moved pages is essential - otherwise Google will penalize the website! <br /> <br /> In addition, technical SEO also entails setting up an effective internal linking structure so that users can navigate seamlessly between pages on the site. This helps increase dwell time and gives visitors more opportunities to explore other relevant content too. Moreover, implementing structured data markups such as schema markup can lead to enhanced organic visibility for certain types of queries - this should not be overlooked! <br /> <br /> Finally, it's critical you ensure your website is optimized for mobile devices since more people are now using their phones when searching online. Responsive design ensures webpages look good regardless of device size and resolution; therefore helping maintain positive user experience throughout visits. Additionally, submitting XML sitemaps to Google also helps make sure all your content gets indexed properly. All these steps are crucial for successful technical SEO implementation! <br /> <br /> Overall then, there's no denying that technical SEO plays an integral role in achieving high rankings in SERPs - so it’s worth investing effort into getting it right!<p><a class="ILinks" href="content-marketing.html">Content Marketing</a></p></div>
+<div class="content1  ">Technical SEO is a vital part of any online business. It's the process of optimizing your website for search engine results (SEO) to boost visibility and rankings in organic search results. Without it, you're unlikely to get any traffic or exposure! In simple terms, technical SEO involves improving the technical elements on your website that can help it perform better in organic search engine rankings. These include things like page speed, internal linking structures, canonicalization, mobile optimization and structured data. <br /> <br /> However there's more to technical SEO than just those few factors! It also includes topics such as URL structure, image optimization, crawling and indexing issues, site architecture and server configuration. Optimizing these elements can greatly improve your chances of appearing higher up in SERPs (Search Engine Results Pages). They will also make sure users have a pleasant experience when visiting your site - this is key for ranking well on Google. <br /> <br /> Furthermore, Technical SEO provides insight into how easily search engines can crawl and interpret information from a website. A good strategy should take into account all aspects including usability, content quality and backlinks among others. By doing so you'll ensure that both humans and bots are able to access important pages with ease. Additionally, using tracking tools such as Google Analytics or Search Console can be invaluable too; providing an abundance of data which you can use to refine your strategy further! <br /> <br /> In conclusion, Technical SEO is an essential tool for any successful online presence; ensuring high visibility in SERPs along with great user experiences. With the right approach it can be highly effective at boosting traffic & organic rankings - but don't forget about other crucial elements like content quality & link building either! If done correctly then the rewards could be bountiful! So why not give it a try today?<p><a class="ILinks" href="local-seo-2.html">Local SEO</a></p></div>
 </div>
 </div>
 </div>
