--- a/huzaifa/technical-seo-2.html
+++ b/huzaifa/technical-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Technical SEO">
 <meta name="dc.title" content="Technical SEO">
-<meta name="description" content="Technical SEO is a vital part of any online business. It's the process of optimizing your website for search engine results (SEO) to boost visibility and rankings in organic search results. Without it, you're unlikely to get any traffic or exposure! In simple terms, technical SEO involves improving the technical elements on your website that can help it perform better in organic search engine rankings. These include things like page speed, internal linking structures, canonicalization, mobile optimization and structured data. ">
+<meta name="description" content="Technical SEO is an important part of the success of any website. It consists of optimizing a website's structure, content, and code for better visibility in search engines (like Google). Through technical SEO, you can make sure that all your hard work creating content and managing a website isn't wasted: if it cannot be found by search engines, nobody will ever see it!">
 <meta name="keywords" content="Technical SEO,Technical SEO">
 <meta name="author" content="Technical SEO">
 <link rel="canonical" href="technical-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #f5f3ef;
+ background: #eeece8;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #0f0f0f !important;
+ color: #0d0d0d !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #000000;
+ color: #080808;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #000000 !important;
+ color: #080808 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #141414;
+ background: #000000;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Technical SEO"],
 "offers": [{
 "sku": "Technical SEO",
-"availabilityStarts": "2023-06-19 10:50:24",
+"availabilityStarts": "2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:24",
+"availabilityStarts":"2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:24",
+"availabilityStarts":"2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:24",
+"availabilityStarts":"2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:24",
+"availabilityStarts":"2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:24",
+"availabilityStarts": "2023-06-19 10:50:28",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:24",
+"availabilityStarts":"2023-06-19 10:50:28",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Technical SEO",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "3","ratingCount": "3",
-"reviewCount": "4"
+"ratingValue": "4","ratingCount": "3",
+"reviewCount": "5"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Technical SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Technical SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Technical SEO is a vital part of any online business. It's the process of optimizing your website for search engine results (SEO) to boost visibility and rankings in organic search results. Without it, you're unlikely to get any traffic or exposure! In simple terms, technical SEO involves improving the technical elements on your website that can help it perform better in organic search engine rankings. These include things like page speed, internal linking structures, canonicalization, mobile optimization and structured data. <br /> <br /> However there's more to technical SEO than just those few factors! It also includes topics such as URL structure, image optimization, crawling and indexing issues, site architecture and server configuration. Optimizing these elements can greatly improve your chances of appearing higher up in SERPs (Search Engine Results Pages). They will also make sure users have a pleasant experience when visiting your site - this is key for ranking well on Google. <br /> <br /> Furthermore, Technical SEO provides insight into how easily search engines can crawl and interpret information from a website. A good strategy should take into account all aspects including usability, content quality and backlinks among others. By doing so you'll ensure that both humans and bots are able to access important pages with ease. Additionally, using tracking tools such as Google Analytics or Search Console can be invaluable too; providing an abundance of data which you can use to refine your strategy further! <br /> <br /> In conclusion, Technical SEO is an essential tool for any successful online presence; ensuring high visibility in SERPs along with great user experiences. With the right approach it can be highly effective at boosting traffic & organic rankings - but don't forget about other crucial elements like content quality & link building either! If done correctly then the rewards could be bountiful! So why not give it a try today?<p><a class="ILinks" href="local-seo-2.html">Local SEO</a></p></div>
+<div class="content1  ">Technical SEO is an important part of the success of any website. It consists of optimizing a website's structure, content, and code for better visibility in search engines (like Google). Through technical SEO, you can make sure that all your hard work creating content and managing a website isn't wasted: if it cannot be found by search engines, nobody will ever see it!<br /> <br /> However, with all its importance, there are still many misconceptions around Technical SEO. For example, some people think that just by adding keywords to their page titles they are done - whereas in fact keyword optimization is only one small piece of the puzzle. Other common misconceptions include the idea that once you've invested in technical SEO for a website, there's nothing else to do; or that it's enough to just add meta-descriptions to your pages – when actually there are much more complex components to this process. <br /> <br /> Furthermore, Technical SEO involves not only making sure all your elements are indexed properly so they show up on search engine results pages (SERPs), but also ensuring your webpages load quickly and have correct URLs and metadata set-up. This helps improve user experience as well as increasing rankings! Additionally, it involves regularly auditing your site for any errors or issues such as broken links or images which could impede performance on SERPs. <br /> <br /> To sum up; Technical SEO is an incredibly imporatant factor which should not be overlooked when developing a website. If done correctly it can help ensure optimal visibility on SERPs and therefore increase traffic to websites substantially! Therefore don't skimp on this essential aspect of web development - invest time into researching the best practices for Technical SEO and start utilizing them today! Afterall; what good is having a beautiful website if no one can find it!?<p><a class="ILinks" href="on-page-seo.html">On-Page SEO</a></p></div>
 </div>
 </div>
 </div>
