--- a/huzaifa/local-seo-2.html
+++ b/huzaifa/local-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Local SEO">
 <meta name="dc.title" content="Local SEO">
-<meta name="description" content="Local SEO (Search Engine Optimization) is an invaluable tool for businesses wishing to increase their visibility and stand out from the competition. It involves optimizing your website, content and other online assets to improve your ranking in local search results. ">
+<meta name="description" content="Local SEO is an important tool for businesses to (maximise) their visibility online. It helps companies to target potential customers in their own area and gain more business. Without it, businesses may struggle to be seen on search engines like Google or Bing! ">
 <meta name="keywords" content="Local SEO,Local SEO">
 <meta name="author" content="Local SEO">
 <link rel="canonical" href="local-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #f7f5f1;
+ background: #edebe7;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #101010 !important;
+ color: #040404 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #0b0b0b;
+ color: #050505;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #0b0b0b !important;
+ color: #050505 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #0d0d0d;
+ background: #0b0b0b;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Local SEO"],
 "offers": [{
 "sku": "Local SEO",
-"availabilityStarts": "2023-06-19 10:50:23",
+"availabilityStarts": "2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:23",
+"availabilityStarts":"2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:23",
+"availabilityStarts":"2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:23",
+"availabilityStarts":"2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:23",
+"availabilityStarts":"2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:23",
+"availabilityStarts": "2023-06-19 10:50:31",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:23",
+"availabilityStarts":"2023-06-19 10:50:31",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Local SEO",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "5","ratingCount": "5",
-"reviewCount": "4"
+"ratingValue": "3","ratingCount": "5",
+"reviewCount": "3"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Local SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Local SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Local SEO (Search Engine Optimization) is an invaluable tool for businesses wishing to increase their visibility and stand out from the competition. It involves optimizing your website, content and other online assets to improve your ranking in local search results. <br /> <br /> By utilizing Local SEO, you can ensure that customers searching for services in your area are able to find you easily! This could mean the difference between a customer choosing you over another business or not. Through correctly implemented Local SEO tactics, you will also gain more exposure to potential customers who may have otherwise never found you.<br /> <br /> Moreover, it's important to note that local search engine rankings are different than organic rankings. Whereas organic rankings consider results from all over the internet, local searches focus only on websites located nearby. Thus, it's necessary to tailor your strategy specifically for local searches if you want maximum visibility in this arena!<br /> <br /> Furthermore, there are several steps which should be taken when attempting to optimize for local searches. Firstly of all, make sure your website is properly optimized; this includes adding geographical keywords into titles and meta descriptions as well as ensuring that it loads quickly and is mobile-friendly. Additionally (and perhaps most importantly), obtaining citations from trusted sources such as directories and review sites can really help with improving your ranking. Lastly don't forget about social media - keeping active profiles on sites like Facebook and Twitter will help increase brand awareness locally too! <br /> <br /> In conclusion, the importance of Local SEO cannot be underestimated! With its ability to greatly improve visibility among those searching in a particular geographic area, businesses should take advantage of this powerful tool if they haven't already done so! Moreover with proper implementation of strategies such as optimizing content and obtaining citations from reliable sources, success in this field should soon follow!<p><a class="ILinks" href="technical-seo-2.html">Technical SEO</a></p></div>
+<div class="content1  ">Local SEO is an important tool for businesses to (maximise) their visibility online. It helps companies to target potential customers in their own area and gain more business. Without it, businesses may struggle to be seen on search engines like Google or Bing! <br /> <br /> However, with effective local SEO techniques, businesses can (optimize) their website content and structure so that it will rank higher in the search engine results page (SERP). This not only increases traffic to the website but also improves the chances of converting those visitors into customers. <br /> <br /> Moreover, Local SEO can help build a strong presence for a company by improving its reputation through local directory listings. This way customers can find information about the company easily and provide reviews which helps generate trust among potential buyers. <br /> <br /> Another great benefit of using Local SEO is that it helps create brand recognition and awareness amongst people in your locality. By utilizing popular keywords and phrases related to your business, you can reach out to more people who are looking for specific services or products within your area. <br /> <br /> Transition: In conclusion, <br /> Local SEO provides multiple benefits for businesses including increased visibility on search engines, better ranking in SERPs, higher chance of conversions as well as improved reputation and brand awareness amongst people in your locality! All these advantages make local SEO a valuable asset for any business hoping to succeed online!<p><a class="ILinks" href="google-algorithm-updates.html">Google Algorithm Updates</a></p></div>
 </div>
 </div>
 </div>
