--- a/huzaifa/keyword-research-2.html
+++ b/huzaifa/keyword-research-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Keyword Research">
 <meta name="dc.title" content="Keyword Research">
-<meta name="description" content="Keyword research is an important part of SEO(Search Engine Optimization). It's a process of finding and analyzing the words and phrases that people use to search for information online. ">
+<meta name="description" content="Keyword research is an important part of any SEO strategy. It involves discovering and analyzing the most appropriate words that people use when searching for a particular product, service, or information(!). This process helps to identify opportunities to drive more organic traffic to your website by optimizing it for these keywords.">
 <meta name="keywords" content="Keyword Research,Keyword Research">
 <meta name="author" content="Keyword Research">
 <link rel="canonical" href="keyword-research-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #efede9;
+ background: #eceae6;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #060606 !important;
+ color: #0b0b0b !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #040404;
+ color: #060606;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #040404 !important;
+ color: #060606 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #121212;
+ background: #101010;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Keyword Research"],
 "offers": [{
 "sku": "Keyword Research",
-"availabilityStarts": "2023-06-19 10:50:25",
+"availabilityStarts": "2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:25",
+"availabilityStarts":"2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:25",
+"availabilityStarts":"2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:25",
+"availabilityStarts":"2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:25",
+"availabilityStarts":"2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:25",
+"availabilityStarts": "2023-06-19 10:50:32",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:25",
+"availabilityStarts":"2023-06-19 10:50:32",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Keyword Research",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "5","ratingCount": "4",
-"reviewCount": "4"
+"ratingValue": "4","ratingCount": "4",
+"reviewCount": "5"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Keyword Research</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Keyword Research</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Keyword research is an important part of SEO(Search Engine Optimization). It's a process of finding and analyzing the words and phrases that people use to search for information online. <br /> <br /> To start, you have to think about what your target audience might be looking for. This will help you identify the right keywords to include in your content. Then, you need to do some research into how popular those particular keywords are. You can use tools like Google Trends or keyword research tools like Ubersuggest to find out which ones are most searched for. (This helps narrow down the list so that you don't waste time on irrelevant terms.) <br /> <br /> Once you know which keywords are relevant, it's time to determine how competitive they are. To do this, look at the number of websites competing for each term and consider their authority as well! For example, if there are a lot of big-name sites targeting the same keyword phrase then it may not be worth trying to rank for it. <br /> <br /> Next up is tracking progress! You want to keep an eye on how well your content is doing with these targeted keywords over time. If one isn't performing as well as expected, try tweaking it or replacing it with another one altogether. Additionally, pay attention to changes in the search engine algorithms - they can drastically affect rankings! Lastly, consider adding new keywords periodically – perhaps by using long-tail variations – so that your content stays fresh and relevant. <br /> <br /> In conclusion, keyword research is key when creating any type of SEO strategy! It takes effort but can pay off in higher rankings and more visibility in organic search results! By understanding trends & competition levels associated with certain terms plus regularly monitoring progress, you'll be able to make sure your website is optimized correctly & consistently delivering great results!<p><a class="ILinks" href="technical-seo-2.html">Technical SEO</a></p></div>
+<div class="content1  ">Keyword research is an important part of any SEO strategy. It involves discovering and analyzing the most appropriate words that people use when searching for a particular product, service, or information(!). This process helps to identify opportunities to drive more organic traffic to your website by optimizing it for these keywords.<br /> <br /> However, keyword research can be quite challenging! It requires a deep understanding of the language used in search queries (and potential synonyms) as well as knowledge about what searchers are actually looking for. Additionally, you must keep track of changes in search trends over time and adjust your strategy accordingly. <br /> <br /> Moreover, the competition for certain keywords can be very high! You need to analyze both short-tail and long-tail keywords so you can get a better understanding of how competitive those terms are. In addition, you should evaluate if there are any modifiers like location or price that could make a keyword less competitive. <br /> <br /> On top of all this, you must also continually monitor your progress with keyword research. Tracking metrics such as ranking position and click-through rate will help you determine which keywords are performing best so you can prioritize them in your optimization efforts. With consistent effort and monitoring, keyword research can have a significant impact on your website's visibility! <br /> <br /> Nevertheless, it is important to remember that keyword research is only one piece of the puzzle when it comes to successful SEO strategies. Furthermore, link building and content creation should also be part of your overall approach too - this will help maximize the effects from all aspects of SEO combined! All in all, taking the time to properly conduct keyword research is essential for anyone looking to improve their online presence through search engine optimization.<p><a class="ILinks" href="local-seo-2.html">Local SEO</a></p></div>
 </div>
 </div>
 </div>
