--- a/huzaifa/content-optimization-2.html
+++ b/huzaifa/content-optimization-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Content Optimization">
 <meta name="dc.title" content="Content Optimization">
-<meta name="description" content="Content optimization is a must for any website! It involves optimizing the content to improve search engine visibility and user experience. This is done by writing keyword-rich articles, (avoiding) repetition, using interjections and contractions in text, as well as ensuring that all pages are easily navigable. Additionally, there needs to be an attention to detail such as adding alt tags where applicable. ">
+<meta name="description" content="Content Optimization is the process of refining and improving content for better visibility in search engine results. Through this process, webpages can be made more attractive to users and their relevance to a particular topic increased. It involves various techniques such as keyword research, optimizing titles and meta descriptions, internal linking, backlinks etc. (It is also known as SEO - Search Engine Optimization). ">
 <meta name="keywords" content="Content Optimization,Content Optimization">
 <meta name="author" content="Content Optimization">
 <link rel="canonical" href="content-optimization-2.html">
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #030303 !important;
+ color: #121212 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #0e0e0e;
+ color: #000000;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #0e0e0e !important;
+ color: #000000 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #050505;
+ background: #0d0d0d;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Content Optimization"],
 "offers": [{
 "sku": "Content Optimization",
-"availabilityStarts": "2023-06-19 10:50:29",
+"availabilityStarts": "2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:29",
+"availabilityStarts":"2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:29",
+"availabilityStarts":"2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:29",
+"availabilityStarts":"2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:29",
+"availabilityStarts":"2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:29",
+"availabilityStarts": "2023-06-19 10:50:33",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:29",
+"availabilityStarts":"2023-06-19 10:50:33",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,7 +1660,7 @@ Q2. Why is link building important for SEO?",
 "name": "Content Optimization",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "5","ratingCount": "5",
+"ratingValue": "3","ratingCount": "5",
 "reviewCount": "5"
 }
 }
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Content Optimization</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Content Optimization</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Content optimization is a must for any website! It involves optimizing the content to improve search engine visibility and user experience. This is done by writing keyword-rich articles, (avoiding) repetition, using interjections and contractions in text, as well as ensuring that all pages are easily navigable. Additionally, there needs to be an attention to detail such as adding alt tags where applicable. <br /> <br /> Furthermore, negation can be utilised in certain circumstances to emphasise certain points. Moreover, paranthesis should also be used sparingly but effectively for clarity. An exclamation mark at the end of a sentence will provide emphasis and draw attention to the point being made. Lastly, never forget about the importance of proofreading; typos and other errors should always be rectified before publishing any content online! <br /> <br /> To sum up, content optimization is crucial for any website's success; it helps with SEO rankings while providing users with a great experience that they'll remember fondly! By carefully crafting your message you're sure to get noticed - just don't neglect grammar or spelling in your haste!<p><a class="ILinks" href="technical-seo-2.html">Technical SEO</a></p></div>
+<div class="content1  ">Content Optimization is the process of refining and improving content for better visibility in search engine results. Through this process, webpages can be made more attractive to users and their relevance to a particular topic increased. It involves various techniques such as keyword research, optimizing titles and meta descriptions, internal linking, backlinks etc. (It is also known as SEO - Search Engine Optimization). <br /> <br /> Furthermore, content optimization requires editing existing content in order to make it more effective. This includes restructuring sentences, removing redundant words and phrases, creating clear headlines and subheaders etc. In addition, images should be optimized with proper alt tags for better accessibility. Also punctuation marks should be used carefully to improve the clarity of the text! Moreover, one must pay attention to grammar errors so that readers are not put off by them. <br /> <br /> Moreover (transition phrase), content optimization is an ongoing process which needs continuous monitoring for optimum effectiveness. For instance (interjection), if there is any change in the search engine algorithm or competitors update their website then you have to keep up with those changes too! On top of that (contraction)you have to ensure that your website remains relevant by periodically adding new content or updating old ones. <br /> <br /> In conclusion (transition phrase), Content Optimization can help you increase traffic from organic sources thereby boosting your chances of success online!<p><a class="ILinks" href="keyword-research-2.html">Keyword Research</a></p></div>
 </div>
 </div>
 </div>
